--- a/conclusion.tex
+++ b/conclusion.tex
@@ -1,15 +1,10 @@
-{\bf{\SetMySection} Заключение.} В результате исследования доступности сетевых облачных сервисов в автомобильных сетях:
+{\bf{\SetMySection} Заключение.} В результате проделанной работы:   
 
-\begin{itemize}
+\begin{enumerate}
 
-\item[$-$] сформирована конфигурация мобильной беспроводной сети передачи данных на основе сетей 802.11s, 802.11abg и LTE;
+\item[$-$] разработана имитационная модель mesh сети с мультипротокольным узлом.
+поставлены и проведены экспериментальные исследования возможностей сети с мультипрокольным узлом (802.11 и LTE).
 
-\item[$-$] конкретизированы параметры модели и их области значений, позволяющие исследовать периоды наибольших изменений структуры и состояния мобильной беспроводной сети передачи данных;
+\item[$-$] определены параметры имитационной модели диапазоны, при которых обеспечивается надежный доступ к облачным сервисам при передаче коротких экстренных сообщений. 
 
-\item[$-$] разработана согласованная имитационная модель движения транспортных средств и с беспроводной сетью избыточной сетью ередачи данных;
-
-\item[$-$] реализована модель мультипротокольного узла. Созданная модель обеспечивает маршрутизацию между  сетевыми интерфейсами и позволяет реализовывать сценарии моделирования автомобильных mesh сетей с произвольной комбинацией протоколов: 802.11s, 802.11p, 802.11abg, LTE; 
-
-\item[$-$] исследовано время доступности сервисов облачной среды в зависимости от;максимальной скорости передачи данных, типов применяемых протоколов маршрутизации и передачи данных, количества и параметров движения транспортных средств.
-
-\end{itemize}
+\end{enumerate}
