--- a/implementation.tex
+++ b/implementation.tex
@@ -1,4 +1,4 @@
-{\bf{\SetMySection} Среда моделирования передачи сообщений в сети автомобилей.} 
+{\bf{\SetMySection}Описание экспериментов.} 
 
 В качестве ядра среды моделирования использовался дискретно-событийный стимулятор телекоммуникационных систем ns--3\cite{Nsnam.org}. Симулятор ns--3 является свободным программным обеспечением, распространяемым по лицензии GPL. Исходные коды ns--3 открыты для исследования, модификации. В качестве встроенного языка описания моделей используются C++ и Python.
 
@@ -6,7 +6,7 @@
 
 Для построения транспортной сети и моделирования движения транспорта применена модель движения транспорта Intelligent Driver Model (IDM)\cite{5678993}.
 
-Модель IDM описывает движение транспортного средства (ТС) по сети дорог, учитывая расположение ТС на полосах движения, габаритные размеры ТС, дистанцию между ТС, поведение ТС при смене полосы движения, направление движения полос, среднюю скорость движения и ускорение в заданной полосе, сигналы светофоров, распределение транспортных потоков на перекрёстках\cite{5678993}.
+% Модель IDM описывает движение транспортного средства (ТС) по сети дорог, учитывая расположение ТС на полосах движения, габаритные размеры ТС, дистанцию между ТС, поведение ТС при смене полосы движения, направление движения полос, среднюю скорость движения и ускорение в заданной полосе, сигналы светофоров, распределение транспортных потоков на перекрёстках\cite{5678993}.
 
 \begin{figure}[!ht]
 \vspace{-10pt}
@@ -39,22 +39,87 @@
  
 Для реализации комбинации беспроводных сетей разработана модель подвижного мультипротокольного узла с набором сетевых интерфейсов. Для реализации мультипротокольного узла добавлен новый класс, позволяющий комбинировать интерфейсы стандартов: 802.11abg, 802.11s, 802.11p, LTE. 
 
-{\bf{\SetMySubSection} Реализация мультипротокольного узла в среде моделирования.}
-Для проведения экспериментов разработана модель мультипротокольного узла, позволяющая осуществлять доставку пакетов между интерфейсом mesh-сети для сетей 802.11s и интерфейсом LTE. Модель мультипротокольного узла реализована добавлением виртуального узла точка--точка, обеспечивающего передачу маршрутизируемых пакетов между интерфейсами 802.11s и LTE.
+Для проведения исследований разработана пакетная технология инициализации параметров моделирования, обеспечивающая изменения значений параметров модели, к которым относятся:  изменение скорости и траектории движения; протокол маршрутизации; тип транспортного протокола передачи данных; скорость передачи данных; число узлов сети; количество узлов ведущих одновременную передачу; размер передаваемых пакетов; процент потерь пакетов в канале. В процессе моделирования для каждого узла регистрируется: время отправки пакета, время получения пакета, число потерянных пакетов, число отправленных пакетов, размер пакетов, IP адреса источников и получателей сообщений. Данные сохраняются в XML файл и доступны для последующего анализа.
 
-Модель узла реализующая функцию маршрутизации сообщений между сетями передачи данных 802.11s и LTE показана на рисунке~\ref{fig:multiprotocol_realisation}.
+Для проведения экспериментов выполнена настройка значений параметров:
+
+\begin{itemize}
+
+\item тип сети: 802.11s, LTE;
+
+\item число узлов сети: 4-16;
+
+\item параметры трассы: 800 м. с 4-я поворотами (90 градусов), движение двустороннее;
+
+\item скорость передачи данных: 8-2048 Кбит/сек;
+
+\item размер сообщений: 1024 байт;
+
+\item протоколы маршрутизации: HWMP, OLSR, AODV, DSDV;
+
+\item протокол передачи данных: TCP, UDP;
+
+\item число узлов с интерфейсом LTE: 1-4.
+
+\end{itemize}
+
+С разработанной моделью проведены 2 группы экспериментов:
+
+1.	Влияние протоколов маршрутизации на скорость передачи данных
+
+Рассмотрены протоколы маршрутизации OLSR, DSDV, AODV, HWMP. В эксперименте использовался UDP трафик, передаваемый со скоростями 8, 32, 64, 128, 512, 1024, 2048 Кбит/сек. Число узлов с интерфейсом LTE - один. Фактическая скорость передачи данных определялась модулем анализатора трафика компьютерных сетей. Экспериментальные результаты приведены на рис.   .
+
+Снижение фактической скорости составляет 5-37\%. С увеличением скорости передачи фактическая скорость падает так как .  
+Наилучшие результаты на потоках большой интенсивности демонстрируют протоколы AODV, DSDV. Для передачи коротких сообщений с малой интенсивностью наилучшие результаты демонстрирует протокол HWMP.
+
+
+2.	Влияние параметров движения транспортных средств и протоколов на потери сообщений
+
+2.1 Рассмотрены протоколы маршрутизации HWMP, OLSR, AODV, DSDV.  Скорость передачи данных 8-2048 Кбит/сек. Число узлов с интерфейсом LTE - один. Размер передаваемого пакета 1024 байта. Плотность движения по трассе 8, 16 автомобилей на 800 метров. Скорость движения 10--100 миль/час. Потери сообщений определялись модулем анализатора трафика компьютерных сетей. 
+
+Достоверность доставки сообщений оценивалась в условиях высокой динамики изменения структуры сети. Изменения  происходят не реже одного раза в секунду.  В этих условиях интенсивность работы протоколов маршрутизации так же высокая и процент потерянных сообщений значительный. 
 
 \begin{figure}[!ht]
 % \vspace{-0.2cm}
  \centering{
- \epsfig{file = miltiprotocol_realisation.eps, width = 8cm}
- \caption{Реализация мультипротокольного узла.}
- \label{fig:multiprotocol_realisation}}
+ \epsfig{file = speed_lost.eps, width = 6cm}
+ \caption{Процент потерянных сообщений.}
+ \label{fig:speed_lost}}
 % \vspace{-0.1cm}
 \end{figure}
 
-Алгоритм инициализации и функционирования мультипротокольного узла приведён в статье ~\cite{Instrumental}.
+На рисунке рис.~\ref{fig:speed_lost} приведена зависимость процента потерянных сообщений, передаваемых от узла сети 802.11s к облачной среде от использованных протоколов беспроводной маршрутизации и скорости передачи данных. 
+ 
+Потери сообщений составили от 10 до 46\%. Потери растут с увеличением скорости передачи. При увеличении скорости передачи в два раза объем потерянных сообщений увеличивается в три раза. Наибольшие потери наблюдаются при использовании протокола OLSR. 
 
-Мультипротокольный узел связан с транспортным средством, его координаты  наследуются от координат автомобиля. Перемещение автомобиля осуществляется дискретно с интервалом 0.1 секунда, в течение всего периода моделирования.
+2.2 Протокол маршрутизации HWMP. Размер передаваемого пакета 1024 байта. Плотность движения по трассе 8, 16 автомобилей на 800 метров. Скорость движения 10…100 миль/час. Число узлов с интерфейсом LTE - один. 
 
-Для проведения исследований разработана пакетная технология инициализации параметров моделирования, обеспечивающая изменения значений параметров модели, к которым относятся:  изменение скорости и траектории движения; протокол маршрутизации; тип транспортного протокола передачи данных; скорость передачи данных; число узлов сети; количество узлов ведущих одновременную передачу; размер передаваемых пакетов; процент потерь пакетов в канале. В процессе моделирования для каждого узла регистрируется: время отправки пакета, время получения пакета, число потерянных пакетов, число отправленных пакетов, размер пакетов, IP адреса источников и получателей сообщений. Данные сохраняются в XML файл и доступны для последующего анализа.
+\begin{figure}[!ht]
+ \centering{
+ \epsfig{file = alarm_densety.eps, width = 6cm}
+ \caption{Зависимость процента потерь сообщений, передаваемых аварийным автомобилем, от плотности и скорости движения автомобилей.}
+ \label{fig:alarm_densety}}
+\end{figure}
+
+Из графика на рис.~\ref{fig:alarm_densety} следует, что при скорости движения автомобиля 100 миль в час и плотности движения 1 или 2 машины на 100 метров трассы процент потерь составляет 78-92\%. 
+
+Сократить процент потерянных сообщений можно за счёт  увеличения плотности машин находящихся в радиусе действия передатчика mesh, что позволит использовать больше альтернативных путей доставки сообщений. 
+
+2.3 В этом эксперименте проводилось исследование возможности доставки сообщения от аварийного автомобиля, средствами 802.11s до хотя бы одного автомобиля оборудованного 802.11s и LTE на прямом участке 4-х полосного шоссе протяжённостью 800 метров. 
+
+Протокол маршрутизации HWMP. Размер передаваемого пакета 1024 байта. Плотность движения по трассе 16 автомобилей на 800 метров. Скорость движения 10…100 миль/час. Число узлов с интерфейсом LTE - 1,2,3,4, что соответствует  6\%, 12\%, 19\%, 25\% оснащённости потока автомобилей интерфейсом LTE.
+
+Результаты моделирования, приведённые на рис.~\ref{fig:alarm_speed} позволяют сделать вывод о том, что при оснащении устройствами LTE менее 25\% автомобилей процент потерь сообщений становится значительным (  ) уже при скорости 50 миль в час. В этом случае целесообразно использовать альтернативные протоколы отправки сообщений в облачную среду.
+
+В следующем эксперименте определялось время доставки экстренного сообщения от аварийного автомобиля до автомобиля, оснащённого интерфейсом LTE для передачи экстренного сообщения в облачную среду. Передача сообщения от аварийного автомобиля возможна при условии соединения аварийного автомобиля с мобильной mesh-сетью средствами 802.11s.
+
+\begin{figure}[!ht]
+
+ \centering{
+ \epsfig{file = alarm_speed.eps, width = 6cm}
+ \caption{Зависимость доставленных сообщений от скорости движения автомобиля и числа автомобилей оснащёнными интерфейсом LTE.}
+ \label{fig:alarm_speed}}
+
+\end{figure}
+
+Для 8 мобильных узлов (на 800 метров трассы),  среднее время доставки сообщения от абонента в облачную среду составило 70,41 мс; для 16 узлов  4,04 мс. Уменьшение времени доставки сообщений в сети с 16-ю узлами, связано возможностью построения дополнительных маршрутов передачи данных.
