--- a/intro.tex
+++ b/intro.tex
@@ -1,3 +1,40 @@
 {\bf{\SetMySection}~Введение.} 
-Возросшие скорости движения,  расширение дорожной сети, повышение интенсивности движения, увеличение числа участников существенно повышает нагрузку на водителя современного транспортного средства, что негативно сказывается на безопасности дорожного движения. Одним из путей повышения безопасности является информирование водителя об окружающей дорожной обстановке с целью предупреждения потенциально опасных дорожных ситуаций. 
-Оперативный доступ к актуальным данным о дорожной обстановке обеспечивается телематическими сервисами. Постоянное увеличение числа сервисов требует перехода от концепции <<один сервис~--- один канал>> к формированию системы интеграции сервисов и формированию сети передачи данных с учётом автомобильной специфики, к которой относятся: разнородность и большое число источников данных, высокая частота запросов к сервисам и постоянное изменение состава абонентов сети. Исследование разных комбинаций протоколов передачи данных в зависимости от состава сети  и объёмов передаваемых данных является актуальной задачей.
+Интеллектуальная  транспортная  сеть (ИТС) позволяет повысить безопасность участников дорожного движения и облегчает им доступ к информационным ресурсам. Распределенные информационные ресурсы можно рассматривать как облачную среду [ ], предоставляющую сервисы мобильным абонентам.
+
+Абонентами  информационных услуг ИТС являются:
+
+\begin{enumerate}
+
+\item[$-$] водители и пассажиры автомобилей;
+
+\item[$-$]  водители специальных транспортных средств;
+
+\item[$-$]  элементы дорожной инфраструктуры;
+
+\item[$-$]  информационные системы (облачные службы), предоставляющие 
+необходимые сервисы.
+
+\end{enumerate}
+
+К числу главных задач информационного обмена следует отнести:
+
+\begin{enumerate}
+
+\item[$-$] оперативную помощь в сложных или аварийных ситуациях (отправка сообщений <<SOS>>, сообщений о ДТП, cообщения о чрезвычайных ситуациях)\cite{Ford.co.uk};
+
+\item[$-$] мониторинг обстановки на трассе движения (сообщение о погодных условиях и состоянии дорожного покрытия, оперативные изменения в транспортной сети, сообщения о правилах регулирования дорожного движения, сбор и отображение данных о местоположении автомобилей других участников движения);
+
+\item[$-$] мониторинг технического состояния автомобилей (дистанционный сбор данных об отказах и сбоях оборудования, аудио и видео консультации водителя о техническом состоянии автомобиля, дистанционная загрузка новых версий программного обеспечения, учитывающего особенности эксплуатации конкретного автомобиля, дистанционное управление агрегатами автомобиля: двигатель,     трансмиссия, устройства освещения);
+
+\item[$-$] выполнение финансовых расчётов при эксплуатации автомобиля (автоматическая оплата услуг (дорог, парковок, топлива);
+
+\item[$-$] комплексное решение эксплуатационных и транспортных задач (автоматическое сохранение треков движения транспортного средства с        видеофиксацией ключевых точек движения по времени или по событию, уточнение данных о дорожной обстановке в центре управления транспортными средствами);
+
+\item[$-$] предоставления информационно-развлекательных услуг пассажирам  автотранспорта (подключение к удалённым сервисам через мобильную сеть (личная
+ электронная почта, социальные сети, блоги, микросообщения), организация виртуальной локальной сети между автомобилями с целью передачи речи и видеопотока и доступ в глобальную сеть).
+
+\end{enumerate}
+
+Первые три задачи относятся к числу высокоприоритетных, определяющих уровень безопасности движения, для которых характерны малые объемы передаваемых сообщений 500-1000 байт [ ].
+
+Традиционно связь мобильных абонентов с облачными сервисам осуществляется через сеть стационарных станций телекоммуникационных компаний. Однако, стационарные станции не охватывают все регионы и устанавливают связь только в зоне прямой видимости мобильного абонента. Поэтому в отдельные моменты времени абоненту недоступны информационные сервисы и он не может воспользоваться ресурсами, обеспечивающими его безопасность. Так как вопросы обеспечения безопасности актуальны всегда, то задача увеличение зоны уверенного доступа к облачной среде является  важной и востребованной.
