--- a/decision.tex
+++ b/decision.tex
@@ -1,9 +1,10 @@
 {\bf{\SetMySection}Предлагаемые решения.}
-В качестве решения поставленной задачи предлагается объединение известных технологий передачи данных  с мобильной mesh сетью (стандарт 802.11s). В условиях высокой динамики автомобильной сети режим mesh, обеспечивает процедуру самоорганизации абонентов. Автомобиль, расположенный вне зоны связи может связаться с облаком через цепочку автомобилей-ретрансляторов. Сеть предусматривает двунаправленную передачу сообщений - от автомобиля в облако и обратно. Пример выбора альтернативных путей передачи сообщений с использованием mesh, DSRC и глобальных каналов связи на примере систем передачи экстренных сообщений систем <<ЭРА-ГЛОНАСС>> и <<eCall>> приведена на рис.  .
+В качестве решения поставленной задачи предлагается объединение известных технологий передачи данных  с мобильной mesh сетью (стандарт 802.11s). В условиях высокой динамики автомобильной сети режим mesh, обеспечивает процедуру самоорганизации абонентов. Автомобиль, расположенный вне зоны связи может связаться с облаком через цепочку автомобилей-ретрансляторов. Сеть предусматривает двунаправленную передачу сообщений - от автомобиля в облако и обратно.
+%Пример выбора альтернативных путей передачи сообщений с использованием mesh, DSRC и глобальных каналов связи на примере систем передачи экстренных сообщений систем <<ЭРА-ГЛОНАСС>> и <<eCall>> приведена на рис.  .
 
-Интеграция нескольких технологий передачи данных на борту автомобиля обеспечивает в каждый момент времени оптимальный выбор маршрута передачи сообщений с наибольшим временем продолжительности сеанса связи. Достоинством этого решения являются: --- . эти решения позволяют построить новую мобильную сеть дисциплиной связи "точка --- узел выхода".
+Интеграция нескольких технологий передачи данных с mesh на борту автомобиля обеспечивает в каждый момент времени оптимальный выбор маршрута передачи сообщений с наибольшим временем продолжительности сеанса связи. Основным достоинством этого решения является возможность обеспечения канала связи при выходе абонента из зоны покрытия глобальной сети передачи данных. эти решения позволяют построить новую мобильную сеть дисциплиной связи "точка --- узел выхода".
 
-На практике  интеграции реализуется в виде  мультипротокольного ядра - программно-аппаратного сегмента бортового компьютера.
+На практике, предложенное решениеи реализуется в виде  мультипротокольного ядра - программно-аппаратного сегмента бортового компьютера.
 
 Предложенное решение не снимает всех вопросов обеспечения доступа к информационным сервисам в зонах отсутствия устойчивой связи, так как изменение структуры мобильной сети, требует использования дополнительных средств поддержки маршрутизации сетевого трафика. Высокая динамика доступности маршрутов передачи данных во время передачи сообщения может привести к увеличению времени передачи и  потере сообщения. Основными параметрами влияющими на свойства подвижной mesh--сети  передачи данных являются скорости движения мобильных объектов, взаимное расположение узлов сети, радиус действия передатчиков и время подключения к сети. 
 
@@ -11,4 +12,4 @@
 
 Важнейшими задачами построения такой сети является выбор вариантов использования протоколов маршрутизации и передачи данных для повышения достоверности передачи сообщений. Определение времени доставки сообщений к облачным сервисам и абонентам  сети в зависимости от интенсивности трафика движения автомобилей, трафика загрузки сети передачи данных, наличия и состава интерфейсов на автомобилях.
 
-Рассмотрим мобильную  сеть с мультипротокольным ядром, содержащим 2 технологии 802.11s  и LTE. Проведем исследование ее основных характеристик "процент потерянных сообщений" и "фактическая скорость передачи данных". Методом исследования является имитационное моделирование.
+Рассмотрим мобильную  сеть с мультипротокольным ядром, содержащим 2 технологии 802.11s  и LTE. Проведем исследование ее основных характеристик "процент потерь сообщений" и "фактическая скорость передачи данных". Методом исследования является имитационное моделирование.
