--- a/intro.tex
+++ b/intro.tex
@@ -37,4 +37,6 @@
 
 Первые три задачи относятся к числу высокоприоритетных, определяющих уровень безопасности движения, для которых характерны малые объемы передаваемых сообщений 500-1000 байт [ ].
 
-Традиционно связь мобильных абонентов с облачными сервисам осуществляется через сеть стационарных станций телекоммуникационных компаний. Однако, стационарные станции не охватывают все регионы и устанавливают связь только в зоне прямой видимости мобильного абонента. Поэтому в отдельные моменты времени абоненту недоступны информационные сервисы и он не может воспользоваться ресурсами, обеспечивающими его безопасность. Так как вопросы обеспечения безопасности актуальны всегда, то задача увеличение зоны уверенного доступа к облачной среде является  важной и востребованной.
+Традиционно связь мобильных абонентов с облачными сервисам осуществляется через сеть стационарных станций телекоммуникационных компаний. Однако, стационарные станции не охватывают все регионы,
+%и устанавливают связь только в зоне прямой видимости мобильного абонента%
+поэтому в отдельные моменты времени абоненту недоступны информационные сервисы и он не может воспользоваться ресурсами, обеспечивающими его безопасность. Так как вопросы обеспечения безопасности актуальны всегда, задача увеличения зоны уверенного доступа к облачной среде является  важной и востребованной.
