--- a/task.tex
+++ b/task.tex
@@ -1,6 +1,7 @@
 {\bf{\SetMySection}Постановка задачи.}
 
-В настоящее время бесспорными лидерами являются беспроводные технологии передачи данных в автомобильных сетях. Активно используются технологии:
+В настоящее время, бесспорными лидерами передачи данных в автомобильных сетях
+являются беспроводные технологии. Активно используются:
 
 \begin{enumerate}
 
@@ -11,6 +12,11 @@
 \end{enumerate}
 
 Они обеспечивают устойчивую связь автомобиля в зоне прямой видимости стационарной станции при скорости движения автомобиля до 80 миль/ч.
-Для  передачи коротких сообщений между автомобилями и дорожной инфраструктурой используется беспроводная технология DSRC. Её отличает …… Наличие на борту автомобиля приёмопередатчика DSRC позволяет использовать этот канал для доступа к облачной среде, с целью повышения доступности сервисов. Во всех случаях зона уверенного приёма сообщений определена близостью абонента к базовой станции и мощностью передатчика.
+Для  передачи коротких сообщений между автомобилями и дорожной инфраструктурой используется беспроводная технология DSRC. 
+%Её отличает …… 
+Наличие на борту автомобиля приёмопередатчика DSRC позволяет 
+использовать этот канал для доступа к облачной среде, с целью повышения доступности сервисов. 
+%Во всех случаях зона уверенного приёма сообщений определена близостью абонента к базовой станции и мощностью передатчика.
  
-Мобильные абоненты, перемещаясь по трассе с большой скоростью, находятся в зоне устойчивой связи короткий интервал времени и если в этот момент базовая станция перегружена, не могут установить надёжную связь для доступа к приоритетным информационным сервисам. Эта проблема ставит задачу исследования вариантов увеличения зоны устойчивого доступа  мобильным абонентам к информационным сервисам без изменения инфраструктуры базовых станций и их характеристик.
+%Мобильные абоненты, перемещаясь по трассе с большой скоростью, находятся в зоне устойчивой связи короткий интервал времени и если в этот момент базовая станция перегружена, не могут установить надёжную связь для доступа к приоритетным информационным сервисам. 
+Высокая загрузка базовых станций, отсутствие надёжного покрытия глобальными сетями передачи данных всей дорожной сети затрудняет возможность использования сервисов облачной среды.  Эта проблема ставит задачу исследования вариантов увеличения зоны устойчивого доступа  мобильным абонентам к информационным сервисам без изменения инфраструктуры базовых станций и их характеристик.
