--- a/decision.tex
+++ b/decision.tex
@@ -4,9 +4,7 @@
 
 Интеграция нескольких технологий передачи данных с mesh на борту автомобиля обеспечивает в каждый момент времени оптимальный выбор маршрута передачи сообщений с наибольшим временем продолжительности сеанса связи. Основным достоинством этого решения является возможность обеспечения канала связи при выходе абонента из зоны покрытия глобальной сети передачи данных. эти решения позволяют построить новую мобильную сеть дисциплиной связи "точка --- узел выхода".
 
-На практике, предложенное решениеи реализуется в виде  мультипротокольного ядра - программно-аппаратного сегмента бортового компьютера.
-
-Предложенное решение не снимает всех вопросов обеспечения доступа к информационным сервисам в зонах отсутствия устойчивой связи, так как изменение структуры мобильной сети, требует использования дополнительных средств поддержки маршрутизации сетевого трафика. Высокая динамика доступности маршрутов передачи данных во время передачи сообщения может привести к увеличению времени передачи и  потере сообщения. Основными параметрами влияющими на свойства подвижной mesh--сети  передачи данных являются скорости движения мобильных объектов, взаимное расположение узлов сети, радиус действия передатчиков и время подключения к сети. 
+На практике, предложенное решение реализуется в виде  мультипротокольного ядра - программно-аппаратного сегмента бортового компьютера. Предложенное решение не снимает всех вопросов обеспечения доступа к информационным сервисам в зонах отсутствия устойчивой связи, так как изменение структуры мобильной сети, требует использования дополнительных средств поддержки маршрутизации сетевого трафика. Высокая динамика доступности маршрутов передачи данных во время передачи сообщения может привести к увеличению времени передачи и  потере сообщения. Основными параметрами влияющими на свойства подвижной mesh--сети  передачи данных являются скорости движения мобильных объектов, взаимное расположение узлов сети, радиус действия передатчиков и время подключения к сети. 
 
 Сегодня, для построения пути доступа к облачной среде используются классические алгоритмы поиска маршрутов mesh сетях, которые предполагают поиск единственного маршрута до единственного заранее известного адресата. В случае связи с облачным сервисом осуществляется выбор наиболее перспективного узла из нескольких альтернативных. Для этого необходимо выявить доступные узлы с выходом в облачную среду и оценить перспективность передачи и приёма данных через них.  
 
