--- a/implementation.tex
+++ b/implementation.tex
@@ -25,11 +25,9 @@
 
 \item[$-$]Модель интерфейса 802.11s\cite{Andreev}. Реализация допускает применение протокола маршрутизации HWMP в режиме с использованием корневого узла и с построением маршрута передачи по запросу.
 
-\item[$-$]Реализации моделей протоколов маршрутизации в беспроводных сетях HWMP, OLSR, AODV, DSDV\cite{Narra:2011:DDV:2151054.2151132}.
+\item[$-$]Реализации моделей протоколов маршрутизации в беспроводных сетях: HWMP, OLSR, AODV, DSDV\cite{Narra:2011:DDV:2151054.2151132}.
 
-\item[$-$] Модуль сбора и обработки статистики сетевого трафика, предоставляющий разнообразные методы сбора характеристик моделируемых сетевых устройств и каналов связи. 
-
-\item[$-$] Анализатор трафика компьютерных сетей, предоставляющий широкие возможности по фильтрации и сортировке данных трафика различных сетевых протоколов.
+\item[$-$] Модуль сбора и обработки статистики сетевого трафика, предоставляющий разнообразные методы сбора характеристик моделируемых сетевых устройств,  каналов связи, фильтрации и сортировки данных трафика различных сетевых протоколов.
  
 \item[$-$] Модуль визуализации моделей, позволяющий отображать топологию моделируемой сети, потоки данных, характеристики интерфейсов и каналов, а также их изменения на протяжении симуляции.
 
@@ -69,7 +67,7 @@
 
 Рассмотрены протоколы маршрутизации OLSR, DSDV, AODV, HWMP. В эксперименте использовался UDP трафик, передаваемый со скоростями 8, 32, 64, 128, 512, 1024, 2048 Кбит/сек. Число узлов с интерфейсом LTE - один. Фактическая скорость передачи данных определялась модулем анализатора трафика компьютерных сетей. Экспериментальные результаты приведены на рис.   .
 
-Снижение фактической скорости составляет 5-37\%. С увеличением скорости передачи фактическая скорость падает так как .  
+%Снижение фактической скорости составляет 5-37\%. С увеличением скорости передачи фактическая скорость падает так как .  
 Наилучшие результаты на потоках большой интенсивности демонстрируют протоколы AODV, DSDV. Для передачи коротких сообщений с малой интенсивностью наилучшие результаты демонстрирует протокол HWMP.
 
 
@@ -105,13 +103,13 @@
 
 Сократить процент потерянных сообщений можно за счёт  увеличения плотности машин находящихся в радиусе действия передатчика mesh, что позволит использовать больше альтернативных путей доставки сообщений. 
 
-2.3 В этом эксперименте проводилось исследование возможности доставки сообщения от аварийного автомобиля, средствами 802.11s до хотя бы одного автомобиля оборудованного 802.11s и LTE на прямом участке 4-х полосного шоссе протяжённостью 800 метров. 
+2.3 Исследование возможности доставки сообщения от аварийного автомобиля, средствами 802.11s до хотя бы одного автомобиля оборудованного 802.11s и LTE на прямом участке 4-х полосного шоссе протяжённостью 800 метров. 
 
 Протокол маршрутизации HWMP. Размер передаваемого пакета 1024 байта. Плотность движения по трассе 16 автомобилей на 800 метров. Скорость движения 10…100 миль/час. Число узлов с интерфейсом LTE - 1,2,3,4, что соответствует  6\%, 12\%, 19\%, 25\% оснащённости потока автомобилей интерфейсом LTE.
 
-Результаты моделирования, приведённые на рис.~\ref{fig:alarm_speed} позволяют сделать вывод о том, что при оснащении устройствами LTE менее 25\% автомобилей процент потерь сообщений становится значительным (  ) уже при скорости 50 миль в час. В этом случае целесообразно использовать альтернативные протоколы отправки сообщений в облачную среду.
+Результаты моделирования, приведённые на рис.~\ref{fig:alarm_speed} позволяют сделать вывод о том, что при оснащении устройствами LTE менее 25\% автомобилей процент потерь сообщений становится значительным (более 40\%) уже при скорости 50 миль в час. В этом случае целесообразно использовать альтернативные протоколы отправки сообщений в облачную среду.
 
-В следующем эксперименте определялось время доставки экстренного сообщения от аварийного автомобиля до автомобиля, оснащённого интерфейсом LTE для передачи экстренного сообщения в облачную среду. Передача сообщения от аварийного автомобиля возможна при условии соединения аварийного автомобиля с мобильной mesh-сетью средствами 802.11s.
+2.4 Определение времени доставки экстренного сообщения от аварийного автомобиля до автомобиля, оснащённого интерфейсом LTE для передачи экстренного сообщения в облачную среду. Передача сообщения от аварийного автомобиля возможна при условии соединения аварийного автомобиля с мобильной mesh-сетью средствами 802.11s.
 
 \begin{figure}[!ht]
 
